<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="14dp"
    android:layout_marginVertical="7dp"
    card_view:cardCornerRadius="6dp">

    <RelativeLayout
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="14dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_user_photo"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Name of User"/>

        <TextView
            android:id="@+id/tv_user_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_toEndOf="@id/img_user_photo"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="13sp"
            android:textStyle="italic"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="User Companies"/>

        <TextView
            android:id="@+id/tv_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_company"
            android:layout_toEndOf="@id/img_user_photo"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="User Location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_user_stats"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/follower"
                android:textAlignment="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/following"
                android:textAlignment="center"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_user_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:text="100"/>

            <TextView
                android:id="@+id/tv_user_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:text="100"/>

            <TextView
                android:id="@+id/tv_user_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:text="100"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>